Add OpenShift support (#359)
