# apis/installer/v1alpha1/kubevault_webhook_server_types.go
@@ -19,6 +19,7 @@ package v1alpha1
 import (
 	core "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"kmodules.xyz/resource-metadata/apis/shared"
 )
 
 const (
@@ -79,6 +80,8 @@ type KubevaultWebhookServerSpec struct {
 	ServiceAccount     ServiceAccountSpec       `json:"serviceAccount"`
 	Apiserver          WebhookAPIServerSpec     `json:"apiserver"`
 	Monitoring         UIServerMonitoring       `json:"monitoring"`
+	// +optional
+	Distro shared.DistroSpec `json:"distro"`
 }
 
 type WebhookAPIServerSpec struct {
