# charts/kubevault-operator/values.openapiv3_schema.yaml
@@ -1314,6 +1314,20 @@ properties:
     type: string
   criticalAddon:
     type: boolean
+  distro:
+    properties:
+      openshift:
+        type: boolean
+      ubi:
+        enum:
+        - all
+        - catalog
+        - operator
+        type: string
+    required:
+    - openshift
+    - ubi
+    type: object
   fullnameOverride:
     type: string
   imagePullPolicy:
